<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/delete_item"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:background="#88a3be"
            android:src="@drawable/delete"
            />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/update_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/update_item"
            android:textColor="@color/white" />


    </LinearLayout>


    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@color/colorPrimaryDark"
        android:padding="20dp"
        android:src="@drawable/ic_camera" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/item_image"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:background="@color/colorAccent"
        android:text="@string/add_photo"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/add_photo"
        android:background="@color/colorPrimaryDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/l1"
        android:layout_below="@id/view2"
        android:layout_marginTop="5dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="#6b6969"
                android:hint="@string/enter_name" />

            <EditText
                android:id="@+id/where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="#6b6969"
                android:hint="@string/where_is_it" />

            <EditText
                android:id="@+id/additional_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="#6b6969"
                android:hint="@string/enter_additional_info" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>